--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.google.android.material:material:1.2.0'
     implementation 'com.journeyapps:zxing-android-embedded:4.0.2'
+    implementation 'com.android.volley:volley:1.1.0'
 }
